Fixed spacing

--- a/components/RecordedShowPlayer/RecordedShowsPlayer.module.scss
+++ b/components/RecordedShowPlayer/RecordedShowsPlayer.module.scss
@@ -76,6 +76,8 @@
 	display: inline-block;
 	width: auto;
 	margin: 0 auto;
+
+	white-space: break-spaces;
 		// background-color: revert;
 		// color: #000;
   }
